2016-02-12  Carl Hetherington  <cth@carlh.net>

	* Add basic support for SSA (SubStation Alpha) subtitles (#128).

2016-02-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.20 released.

2016-02-09  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2016-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.19 released.

2016-02-05  c.hetherington  <cth@carlh.net>

	* New cs_CZ translation from Tomáš Begeni.

2016-02-04  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-02-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.18 released.

2016-02-02  Carl Hetherington  <cth@carlh.net>

	* Add Delete-key shortcut to remove content.

2016-02-01  Carl Hetherington  <cth@carlh.net>

	* Allow removal of multiple pieces of content in one click.

	* Synchronise content list / timeline selection when
	the content list selection changes.

	* Move the preview to the start of a piece of content
	when selecting it (suggested by Carsten Kurz).

2016-02-01  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-02-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.17 released.

2016-01-30  Carl Hetherington  <cth@carlh.net>

	* Fix a collection of strange problems with the content list when
	dragging content around in the timeline.

2016-01-24  Carl Hetherington  <cth@carlh.net>

	* Fix encodes getting stuck in some cases (#783).

2016-01-23  Carl Hetherington  <cth@carlh.net>

	* Fix estimate of required disk space to take referencing
	of existing DCPs into account.

2016-01-14  Carl Hetherington  <cth@carlh.net>

	* Add frames-per-second summary to log at the end of
	a transcode (#786).

	* Allow multiple CC addresses for KDM emails (#785).

2016-01-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.16 released.

2016-01-13  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect fades when trim is being used.

2016-01-11  Carl Hetherington  <cth@carlh.net>
